[metadata]
name = maledict
author = Hosein
description = n-curses expense tracker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hos-b/maledict
license = MIT
version = attr: version.__version__

[options]
packages = find:
include_package_data = True

[options.packages.find]
where = .

[options.package_data]
maledict =
    README.md
    database/.maledictrc
    config/*.yaml

[options.entry_points]
console_scripts =
    maledict = maledict.maledict:run